syntax = "proto3";

package grpc;

option java_package = "io.grpc.status.proto";

message EV_KeyValuePair {
  string name = 1;
  string value = 2;
  string docstring= 3;
}

message EV_KeyValueList {
  repeated EV_KeyValuePair pair = 1;
}